--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap');
+
 .container {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
@@ -10,6 +12,7 @@
 }
 
 .sidebar {
+    display: grid;
     grid-column: 1 / 2;
     grid-row: 1 / -1;
     background-color: #D48166;
