--- a/style.css
+++ b/style.css
@@ -16,6 +16,15 @@
     grid-column: 1 / 2;
     grid-row: 1 / -1;
     background-color: #D48166;
+    font-family: 'Poppins', sans-serif;
+    padding: 20px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 75px repeat(10, 50px);
+    height: 100vh;
+}
+
+#logo > h1 {
+    margin: 0;
 }
 
 .nav {
