--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 1fr 1fr 5fr 5fr;
+    height: 100vh;
+    width: 100vw;
 }
 
 .header {
@@ -24,7 +26,6 @@ body {
     padding: 20px;
     grid-template-columns: 1fr;
     grid-template-rows: 75px repeat(10, 50px);
-    height: 100vh;
 }
 
 #logo > h1 {
