--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: minmax(275px, 1fr) 2fr 1fr;
     grid-template-rows: 1fr 1fr 5fr 5fr;
     height: 100vh;
     width: 100vw;
