Change sidebar font color

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
     padding: 20px;
     grid-template-columns: 1fr;
     grid-template-rows: 75px repeat(10, 50px);
+    color: #ffffff;
 }
 
 #logo > h1 {
