Change sidebar font weight

--- a/style.css
+++ b/style.css
@@ -30,10 +30,12 @@ body {
     grid-template-rows: 75px repeat(10, 50px);
     color: #ffffff;
     font-size: 18px;
+    font-weight: 500;
 }
 
 #logo > h1 {
     margin: 0;
+    font-weight: 600;
 }
 
 .nav {
