--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: minmax(275px, 1fr) 2fr 1fr;
+    grid-template-columns: minmax(275px, 1fr) minmax(660px, 3fr) minmax(275px, 1fr);
     grid-template-rows: 1fr 1fr 5fr 5fr;
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
 }
 
@@ -44,8 +44,24 @@ body {
 }
 
 .projects {
+    display: grid;
     grid-column: 2 / 3;
     grid-row: 3 / -1;
+    padding: 20px;
+    grid-template-columns: repeat(auto-fit, 300px);
+    gap: 20px;
+}
+
+.projects > h3 {
+    grid-column: 1 / -1;
+}
+
+.projects .card {
+    background-color: white;
+    border-radius: 8px;
+    padding: 10px;
+    width: 280px;
+    height: 250px;
 }
 
 .announcements {
