--- a/style.css
+++ b/style.css
@@ -49,19 +49,34 @@ body {
     grid-row: 3 / -1;
     padding: 20px;
     grid-template-columns: repeat(auto-fit, 300px);
+    grid-template-rows: 30px repeat(auto-fit, 250px);
     gap: 20px;
 }
 
 .projects > h3 {
     grid-column: 1 / -1;
+    margin: 0;
 }
 
 .projects .card {
     background-color: white;
     border-radius: 8px;
-    padding: 10px;
-    width: 280px;
+    padding: 30px;
+    width: 300px;
     height: 250px;
+    font-size: 14px;
+    color: #7f7f7f;
+    box-sizing: border-box;
+}
+
+.projects .card h4 {
+    margin: 0;
+    font-size: 15px;
+    color: #000000;
+}
+
+.projects .card p {
+    margin: 0;
 }
 
 .announcements {
