--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: minmax(300px, 1fr) minmax(660px, 3fr) minmax(275px, 1fr);
-    grid-template-rows: 1fr 1fr 5fr 5fr;
+    grid-template-columns: minmax(300px, 1fr) minmax(660px, 3fr) minmax(300px, 1fr);
+    grid-template-rows: 1fr 1fr 3fr 3fr;
     min-height: 100vh;
     width: 100vw;
+    max-width: 100%;
 }
 
 .header {
@@ -131,13 +132,14 @@ body {
     gap: 20px;
 }
 
-.projects > h3 {
+.projects > h3,
+.announcements > h3 {
     grid-column: 1 / -1;
     margin: 0;
 }
 
 .projects .card {
-    background-color: white;
+    background-color: #ffffff;
     border-radius: 8px;
     padding: 30px;
     width: 300px;
@@ -158,8 +160,39 @@ body {
 }
 
 .announcements {
+    display: grid;
     grid-column: 3 / -1;
     grid-row: 3 / 4;
+    padding: 20px;
+    padding-left: 0;
+    grid-template-rows: 30px auto;
+    gap: 20px;
+}
+
+.announcements .card {
+    background-color: #ffffff;
+    padding: 30px 20px;
+    border-radius: 8px;
+    height: min-content;
+}
+
+.announcements .card h5 {
+    margin: 0;
+    padding: 0 5px;
+}
+
+.announcements .card p {
+    font-size: 12px;
+    margin: 0;
+    color: #7f7f7f;
+    padding: 0 5px;
+}
+
+.announcements .card hr {
+    height: 1px;
+    background-color: #7f7f7f;
+    border: none;
+    margin: 15px 0;
 }
 
 .trending {
