--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 .container {
     display: grid;
     grid-template-columns: minmax(300px, 1fr) minmax(660px, 3fr) minmax(300px, 1fr);
-    grid-template-rows: 1fr 1fr 3fr 3fr;
+    grid-template-rows: 100px 100px 3fr 3fr;
     min-height: 100vh;
     width: 100vw;
     max-width: 100%;
