--- a/style.css
+++ b/style.css
@@ -127,8 +127,8 @@ body {
     grid-column: 2 / 3;
     grid-row: 3 / -1;
     padding: 20px;
-    grid-template-columns: repeat(auto-fit, 300px);
-    grid-template-rows: 30px repeat(auto-fit, 250px);
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    grid-template-rows: 30px repeat(auto-fit, minmax(250px,1fr));
     gap: 20px;
 }
 
@@ -143,8 +143,8 @@ body {
     background-color: #ffffff;
     border-radius: 8px;
     padding: 30px;
-    width: 300px;
-    height: 250px;
+    /*width: 300px;
+    height: 250px;*/
     font-size: 14px;
     color: #7f7f7f;
     box-sizing: border-box;
