Make button div flex, add padding
Made it flex to adjust the gap betweenn the buttons and added padding
on top to make it look better

--- a/style.css
+++ b/style.css
@@ -169,7 +169,10 @@ h1 {
 }
 
 .projects .buttons {
-    justify-self: end;
+    padding-top: 10px;
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
 }
 
 .announcements {
